# hr-attrition-analytics

./: .gitignore  Pipfile  README.md  dvc.yaml  generate_data.py  main.py  params.yaml  pyproject.toml
.dvc/: config
data/processed/: .gitignore  attrition_costs.csv.dvc  employee_risk_scores.csv.dvc  employees_engineered.csv.dvc  high_risk_employees.csv.dvc  intervention_plans.csv.dvc
data/raw/: .gitignore  employees.csv.dvc  exit_interviews.csv.dvc  performance.csv.dvc  promotions.csv.dvc  recruitment_costs.csv.dvc  surveys.csv.dvc  training.csv.dvc
data/stages/preprocessed/: .gitignore
data/stages/raw/: .gitignore
docs/: about_attrition_rate.md  business_understanding.md  data_dictionary.md
metrics/: .gitignore
models/: .gitignore
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_predictive_modeling.ipynb  04_financial_analysis.ipynb  05_inetrvention_strategies.ipynb
src/data/: data_generator.py
src/stages/: data_generation.py  data_preprocessing.py  data_processing.py  model_evaluation.py  model_training.py
streamlit/: app.py
